cmake_minimum_required(VERSION 3.29)
project(oop)

set(CMAKE_CXX_STANDARD 20)

#add_executable(oop main.cpp)
#add_executable(oop controlStructures.cpp)
#add_executable(oop loops.cpp)
#add_executable(oop functions.cpp)
#add_executable(oop arrays.cpp)
#add_executable(oop classes.cpp)
#add_executable(oop inheritance.cpp)
#add_executable(oop overriding.cpp)
#add_executable(oop friendship.cpp)
#add_executable(oop file_io.cpp)
#add_executable(oop bank.cpp)
#add_executable(oop fileio.cpp)
add_executable(oop test.cpp)